fix(k8s): resolve Kustomization conflicts
- Remove duplicate ConfigMap generator in base (already in configmap.yaml)
- Comment out staging ConfigMap generator (can't merge with removed base)
- Add namespace: nova to all Deployment patches to fix patch matching

Fixes:
- namespace transformation produces ID conflict: [ConfigMap nova-config]
- failed to find unique target for patch Deployment.v1.apps/*-service.[noNs]

--- a/k8s/infrastructure/base/kustomization.yaml
+++ b/k8s/infrastructure/base/kustomization.yaml
@@ -51,12 +51,7 @@ images:
 - name: nova/streaming-service
   newTag: latest
 
-# ConfigMap 生成器
-configMapGenerator:
-- name: nova-config
-  literals:
-  - APP_ENV=production
-  - LOG_LEVEL=info
+# ConfigMap 已在 configmap.yaml 中定义,不使用生成器避免冲突
 
 # Secret 生成器 (最好用于开发环境)
 # secretGenerator:
