--- a/k8s/infrastructure/overlays/staging/kustomization.yaml
+++ b/k8s/infrastructure/overlays/staging/kustomization.yaml
@@ -45,23 +45,23 @@ images:
   newName: 025434362120.dkr.ecr.ap-northeast-1.amazonaws.com/nova/user-service
   newTag: e7e75e2daee98ab60e1ed6b0e006d3dfbadd7420
 
-# 副本数配置
+# 副本数配置 (降低至 1 以适应资源限制)
 replicas:
-- count: 2
+- count: 1
   name: auth-service
-- count: 2
+- count: 1
   name: user-service
-- count: 2
+- count: 1
   name: content-service
-- count: 2
+- count: 1
   name: feed-service
-- count: 2
+- count: 1
   name: media-service
-- count: 2
+- count: 1
   name: messaging-service
-- count: 2
+- count: 1
   name: search-service
-- count: 2
+- count: 1
   name: streaming-service
 
 # 公共注解
