fix(k8s): add service-specific database URLs to secrets
- Added individual database URLs for each microservice
- Maintains backward compatibility with generic DATABASE_URL
- Fixes CreateContainerConfigError for all services

--- a/k8s/infrastructure/base/secrets.yaml
+++ b/k8s/infrastructure/base/secrets.yaml
@@ -22,9 +22,20 @@ metadata:
   namespace: nova
 type: Opaque
 stringData:
+  # 通用数据库 URL（向后兼容）
   DATABASE_URL: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_content
   DB_USER: nova
   DB_PASSWORD: ${DB_PASSWORD}  # 由 CI/CD 替换
+
+  # 各服务专用数据库 URL
+  auth-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_auth
+  user-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_user
+  content-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_content
+  feed-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_feed
+  media-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_media
+  messaging-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_messaging
+  search-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_search
+  streaming-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_streaming
 
 ---
 # Redis 凭证
