--- a/k8s/infrastructure/base/secrets.yaml
+++ b/k8s/infrastructure/base/secrets.yaml
@@ -37,6 +37,10 @@ stringData:
   search-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_search
   streaming-db-url: postgres://nova:${DB_PASSWORD}@postgres:5432/nova_streaming
 
+  # 其他基础设施服务 URL
+  elasticsearch-url: http://elasticsearch:9200
+  redis-url: redis://redis:6379
+
 ---
 # Redis 凭证
 apiVersion: v1
