fix(auth): make OAuth config optional with serde default
- Add #[serde(default)] to oauth_providers field
- Derive Default for OAuthConfig
- This allows auth-service to start without OAuth env vars

--- a/k8s/infrastructure/base/auth-service.yaml
+++ b/k8s/infrastructure/base/auth-service.yaml
@@ -79,6 +79,11 @@ spec:
             configMapKeyRef:
               name: nova-config
               key: KAFKA_BROKERS
+        - name: REDIS_URL
+          valueFrom:
+            secretKeyRef:
+              name: nova-db-credentials
+              key: redis-url
         envFrom:
         - configMapRef:
             name: nova-config
