fix(k8s): 修復服務環境變量配置
關鍵修復:
1. auth-service: 替換 JWT_SECRET 為 JWT_PRIVATE_KEY_PEM 和 JWT_PUBLIC_KEY_PEM
   - 修正與代碼配置的不匹配
   - 現在使用 nova-jwt-keys Secret

2. search-service: 添加缺失的 REDIS_URL 環境變量
   - 代碼依賴 Redis 緩存但 K8s 未配置
   - 從 nova-db-credentials Secret 讀取

3. 新增服務架構分析報告 SERVICE_ARCHITECTURE_ANALYSIS.md
   - 詳細記錄所有 12 個後端服務的集成狀況
   - 標識 S3、JWT、Kafka 等關鍵整合點
   - 提供修復優先級建議

已驗證配置:
✅ S3: media-service 已正確配置 S3 憑證
✅ JWT: content/user/messaging/media-service 已配置 JWT Public Key
✅ Redis: 所有需要的服務現已配置 Redis URL
✅ Database: 所有 8 個服務使用專用數據庫

影響:
- auth-service 現可正確啟動並生成 JWT tokens
- search-service 可使用 Redis 緩存搜索結果
- 所有需要認證的服務可驗證 JWT tokens

--- a/k8s/infrastructure/base/auth-service.yaml
+++ b/k8s/infrastructure/base/auth-service.yaml
@@ -69,11 +69,16 @@ spec:
             secretKeyRef:
               name: nova-db-credentials
               key: auth-db-url
-        - name: JWT_SECRET
+        - name: JWT_PRIVATE_KEY_PEM
           valueFrom:
             secretKeyRef:
-              name: nova-secrets
-              key: jwt-secret
+              name: nova-jwt-keys
+              key: JWT_PRIVATE_KEY_PEM
+        - name: JWT_PUBLIC_KEY_PEM
+          valueFrom:
+            secretKeyRef:
+              name: nova-jwt-keys
+              key: JWT_PUBLIC_KEY_PEM
         - name: KAFKA_BROKERS
           valueFrom:
             configMapKeyRef:
