--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -58,6 +58,11 @@ jobs:
         with:
           cache-key-suffix: integration
 
+      - name: Install redis-tools
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y redis-tools
+
       - name: Wait for Postgres to be ready
         timeout-minutes: 2
         run: |
