fix(zitadel): use args instead of command to fix executable path issue
The Zitadel Docker image entrypoint handles the binary path.
Using 'command' overrides the entrypoint and causes 'zitadel not found' error.
Switch to 'args' to let the image's entrypoint work correctly.

--- a/backend/k8s/base/zitadel.yaml
+++ b/backend/k8s/base/zitadel.yaml
@@ -77,8 +77,7 @@ spec:
       initContainers:
         - name: init-db
           image: ghcr.io/zitadel/zitadel:v2.62.1
-          command:
-            - zitadel
+          args:
             - init
             - --config
             - /config/zitadel.yaml
@@ -108,8 +107,7 @@ spec:
         - name: zitadel
           image: ghcr.io/zitadel/zitadel:v2.62.1
           imagePullPolicy: IfNotPresent
-          command:
-            - zitadel
+          args:
             - start
             - --config
             - /config/zitadel.yaml
