fix(zitadel): use nova user as PostgreSQL admin
The nova-db-credentials secret uses 'nova' user, not 'postgres'.
Updated Zitadel config to use nova as the admin user for database initialization.

--- a/backend/k8s/base/zitadel.yaml
+++ b/backend/k8s/base/zitadel.yaml
@@ -35,7 +35,7 @@ data:
   ZITADEL_DATABASE_POSTGRES_DATABASE: "zitadel"
   ZITADEL_DATABASE_POSTGRES_USER_USERNAME: "zitadel"
   ZITADEL_DATABASE_POSTGRES_USER_SSL_MODE: "disable"
-  ZITADEL_DATABASE_POSTGRES_ADMIN_USERNAME: "postgres"
+  ZITADEL_DATABASE_POSTGRES_ADMIN_USERNAME: "nova"
   ZITADEL_DATABASE_POSTGRES_ADMIN_SSL_MODE: "disable"
 
   # First instance configuration
@@ -223,7 +223,7 @@ data:
           SSL:
             Mode: disable
         Admin:
-          Username: postgres
+          Username: nova
           SSL:
             Mode: disable
 
