--- a/backend/k8s/overlays/staging/zitadel-config-patch.yaml
+++ b/backend/k8s/overlays/staging/zitadel-config-patch.yaml
@@ -29,7 +29,8 @@ data:
           SSL:
             Mode: disable
         Admin:
-          Username: postgres
+          # Use nova user which has superuser privileges in this cluster
+          Username: nova
           SSL:
             Mode: disable
 
