fix(zitadel): add explicit Port config to avoid K8s service env var conflict
Kubernetes auto-generates ZITADEL_PORT=tcp://... for service discovery,
which conflicts with Zitadel's Port config parsing. Set explicit Port: 8080.

--- a/backend/k8s/overlays/staging/zitadel-config-patch.yaml
+++ b/backend/k8s/overlays/staging/zitadel-config-patch.yaml
@@ -11,6 +11,10 @@ data:
     ExternalPort: 443
     ExternalSecure: true
 
+    # Explicit port settings to avoid Kubernetes service env var conflicts
+    # Kubernetes auto-creates ZITADEL_PORT=tcp://... which confuses Zitadel
+    Port: 8080
+
     TLS:
       Enabled: false
 
