fix(zitadel): disable Kubernetes service links to prevent env var conflict
Add enableServiceLinks: false to prevent K8s from auto-generating
ZITADEL_PORT=tcp://... which overrides Zitadel's Port config and breaks startup.

--- a/backend/k8s/base/zitadel.yaml
+++ b/backend/k8s/base/zitadel.yaml
@@ -70,6 +70,9 @@ spec:
         app: zitadel
     spec:
       serviceAccountName: default
+      # Disable automatic service links to prevent ZITADEL_PORT env var conflict
+      # Kubernetes auto-generates ZITADEL_PORT=tcp://... which breaks Zitadel
+      enableServiceLinks: false
       securityContext:
         runAsNonRoot: true
         runAsUser: 1000
