fix(k8s): use Recreate strategy for Zitadel in staging
Staging cluster has limited resources and cannot run two Zitadel pods
simultaneously during RollingUpdate. Switching to Recreate strategy
to avoid FailedScheduling due to insufficient CPU/memory.

--- a/backend/k8s/overlays/staging/kustomization.yaml
+++ b/backend/k8s/overlays/staging/kustomization.yaml
@@ -42,6 +42,15 @@ patches:
       kind: Deployment
       name: zitadel
     path: zitadel-resources-patch.yaml
+  # Zitadel deployment strategy - use Recreate to avoid resource contention in staging
+  - target:
+      kind: Deployment
+      name: zitadel
+    patch: |-
+      - op: replace
+        path: /spec/strategy
+        value:
+          type: Recreate
   # Zitadel ConfigMap patch for cross-namespace PostgreSQL
   - target:
       kind: ConfigMap
