--- a/backend/k8s/overlays/staging/synapse-ingress.yaml
+++ b/backend/k8s/overlays/staging/synapse-ingress.yaml
@@ -1,20 +1,13 @@
-# Staging ingress for Matrix Synapse (with SSO support)
+# Staging ingress for Matrix Synapse (using GCE Ingress)
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: matrix-synapse-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-staging
-    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
-    nginx.ingress.kubernetes.io/configuration-snippet: |
-      proxy_set_header X-Forwarded-Proto $scheme;
-      proxy_set_header X-Forwarded-Host $host;
+    kubernetes.io/ingress.class: gce
+    networking.gke.io/managed-certificates: synapse-staging-cert
 spec:
-  tls:
-    - hosts:
-        - matrix.staging.nova.app
-      secretName: matrix-synapse-tls-staging
+  ingressClassName: gce
   rules:
     - host: matrix.staging.nova.app
       http:
@@ -26,3 +19,12 @@ spec:
                 name: matrix-synapse
                 port:
                   number: 8008
+---
+# GKE Managed Certificate for Synapse
+apiVersion: networking.gke.io/v1
+kind: ManagedCertificate
+metadata:
+  name: synapse-staging-cert
+spec:
+  domains:
+    - matrix.staging.nova.app
