--- a/backend/k8s/overlays/staging/zitadel-ingress.yaml
+++ b/backend/k8s/overlays/staging/zitadel-ingress.yaml
@@ -1,19 +1,13 @@
-# Staging ingress for Zitadel
+# Staging ingress for Zitadel (using GCE Ingress)
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: zitadel-ingress
   annotations:
-    kubernetes.io/ingress.class: nginx
-    cert-manager.io/cluster-issuer: letsencrypt-staging
-    nginx.ingress.kubernetes.io/proxy-buffer-size: "128k"
-    nginx.ingress.kubernetes.io/proxy-buffers-number: "4"
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    kubernetes.io/ingress.class: gce
+    networking.gke.io/managed-certificates: zitadel-staging-cert
 spec:
-  tls:
-    - hosts:
-        - id.staging.nova.app
-      secretName: zitadel-tls-staging
+  ingressClassName: gce
   rules:
     - host: id.staging.nova.app
       http:
@@ -25,3 +19,12 @@ spec:
                 name: zitadel
                 port:
                   number: 8080
+---
+# GKE Managed Certificate for Zitadel
+apiVersion: networking.gke.io/v1
+kind: ManagedCertificate
+metadata:
+  name: zitadel-staging-cert
+spec:
+  domains:
+    - id.staging.nova.app
