--- a/backend/k8s/overlays/staging/zitadel-resources-patch.yaml
+++ b/backend/k8s/overlays/staging/zitadel-resources-patch.yaml
@@ -10,7 +10,7 @@
     limits:
       memory: "384Mi"
       cpu: "200m"
-# Init container resources
+# Init container resources (init-db)
 - op: add
   path: /spec/template/spec/initContainers/0/resources
   value:
@@ -20,3 +20,13 @@
     limits:
       memory: "256Mi"
       cpu: "100m"
+# Init container resources (setup-zitadel)
+- op: add
+  path: /spec/template/spec/initContainers/1/resources
+  value:
+    requests:
+      memory: "128Mi"
+      cpu: "50m"
+    limits:
+      memory: "512Mi"
+      cpu: "200m"
