fix(docker): correct build context paths for realtime-chat-service
The GitHub Actions workflow sets build context to ./backend/realtime-chat-service,
but the Dockerfile was using repo-root relative paths. Updated COPY commands to
use relative paths from the service directory.

--- a/backend/realtime-chat-service/Dockerfile
+++ b/backend/realtime-chat-service/Dockerfile
@@ -1,6 +1,6 @@
 # Multi-stage build for realtime-chat-service
 # This is an INDEPENDENT WORKSPACE due to sqlite dependency conflict with matrix-sdk
-# Build context is repository root (for CI/CD compatibility)
+# Build context is ./backend/realtime-chat-service (GitHub Actions sets this)
 
 FROM rust:1.88-slim-bookworm AS builder
 
@@ -18,12 +18,12 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy the independent workspace files from repository root context
-COPY backend/realtime-chat-service/Cargo.toml backend/realtime-chat-service/Cargo.lock ./
-COPY backend/realtime-chat-service/libs ./libs
-COPY backend/realtime-chat-service/src ./src
-COPY backend/realtime-chat-service/build.rs ./
-COPY backend/realtime-chat-service/proto ./proto
+# Copy files from the service directory (context is ./backend/realtime-chat-service)
+COPY Cargo.toml Cargo.lock ./
+COPY libs ./libs
+COPY src ./src
+COPY build.rs ./
+COPY proto ./proto
 
 # Build from the independent workspace
 RUN cargo build --release --bin realtime-chat-service
