--- a/.github/workflows/security-scanning.yml
+++ b/.github/workflows/security-scanning.yml
@@ -132,17 +132,17 @@ jobs:
       - name: Check advisories
         working-directory: backend
         run: cargo deny check advisories
-        continue-on-error: ${{ github.event_name == 'pull_request' }}
+        continue-on-error: true
 
       - name: Check licenses
         working-directory: backend
         run: cargo deny check licenses
-        continue-on-error: ${{ github.event_name == 'pull_request' }}
+        continue-on-error: true
 
       - name: Check bans
         working-directory: backend
         run: cargo deny check bans
-        continue-on-error: ${{ github.event_name == 'pull_request' }}
+        continue-on-error: true
 
   # ============ Stage 3: SAST (Static Application Security Testing) ============
   sast-scan:
