Fix media-service Dockerfile for backend workspace

--- a/backend/media-service/Dockerfile
+++ b/backend/media-service/Dockerfile
@@ -15,31 +15,11 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy workspace files (context is backend directory)
-COPY Cargo.toml Cargo.lock ./
-COPY proto ./proto
-COPY libs ./libs
-COPY media-service ./media-service
-# Copy service deps for workspace resolution
-COPY identity-service/Cargo.toml ./identity-service/Cargo.toml
-COPY content-service/Cargo.toml ./content-service/Cargo.toml
-COPY social-service/Cargo.toml ./social-service/Cargo.toml
-COPY streaming-service/Cargo.toml ./streaming-service/Cargo.toml
-COPY notification-service/Cargo.toml ./notification-service/Cargo.toml
-COPY search-service/Cargo.toml ./search-service/Cargo.toml
-COPY analytics-service/Cargo.toml ./analytics-service/Cargo.toml
-COPY graph-service/Cargo.toml ./graph-service/Cargo.toml
-COPY feed-service/Cargo.toml ./feed-service/Cargo.toml
-COPY feature-store/Cargo.toml ./feature-store/Cargo.toml
-COPY ranking-service/Cargo.toml ./ranking-service/Cargo.toml
-COPY trust-safety-service/Cargo.toml ./trust-safety-service/Cargo.toml
-COPY graphql-gateway/Cargo.toml ./graphql-gateway/Cargo.toml
+# Copy backend workspace from repo root (build context is repo root)
+COPY backend ./backend
 
-# Create stub lib.rs for workspace members we don't need to build
-RUN for dir in identity-service content-service social-service streaming-service notification-service search-service analytics-service graph-service feed-service feature-store ranking-service trust-safety-service graphql-gateway; do \
-    mkdir -p $dir/src && echo "" > $dir/src/lib.rs; \
-    done && \
-    mkdir -p content-service/benches && echo "fn main() {}" > content-service/benches/feed_ranking_bench.rs
+# Change to backend directory for workspace build
+WORKDIR /app/backend
 
 # Downgrade home crate to version compatible with Rust 1.85
 RUN cargo update -p home --precise 0.5.9
@@ -63,9 +43,9 @@ RUN useradd -m -u 1001 -s /bin/bash appuser
 WORKDIR /app
 
 # Copy binaries
-COPY --from=builder /app/target/release/media-service /app/media-service
-COPY --from=builder /app/target/release/thumb-migrate /app/thumb-migrate
-COPY --from=builder /app/target/release/thumb-worker /app/thumb-worker
+COPY --from=builder /app/backend/target/release/media-service /app/media-service
+COPY --from=builder /app/backend/target/release/thumb-migrate /app/thumb-migrate
+COPY --from=builder /app/backend/target/release/thumb-worker /app/thumb-worker
 
 # Adjust ownership
 RUN chown -R appuser:appuser /app
