Fix feed-service Dockerfile for backend workspace

--- a/backend/feed-service/Dockerfile
+++ b/backend/feed-service/Dockerfile
@@ -13,8 +13,10 @@ RUN apt-get update && apt-get install -y \
 
 WORKDIR /app
 
-# Copy entire workspace (context is ./backend)
-COPY . .
+# Copy backend workspace from repo root (build context is repo root)
+COPY backend ./backend
+
+WORKDIR /app/backend
 
 # Build feed-service
 RUN cargo build --release -p feed-service --bin feed-service
@@ -33,7 +35,7 @@ RUN useradd -m -u 1001 -s /bin/bash appuser
 
 WORKDIR /app
 
-COPY --from=builder /app/target/release/feed-service /app/feed-service
+COPY --from=builder /app/backend/target/release/feed-service /app/feed-service
 
 # Adjust ownership and drop privileges
 RUN chown -R appuser:appuser /app
