Fix graphql-gateway Dockerfile for backend workspace

--- a/backend/graphql-gateway/Dockerfile
+++ b/backend/graphql-gateway/Dockerfile
@@ -20,9 +20,10 @@ RUN rustup toolchain install nightly && \
 
 WORKDIR /app
 
-# Copy entire backend workspace (context is ./backend)
-# This includes Cargo.toml, Cargo.lock, all services, libs, and proto directories
-COPY . .
+# Copy backend workspace from repo root (build context is repo root)
+COPY backend ./backend
+
+WORKDIR /app/backend
 
 # Build GraphQL Gateway binary in release mode
 RUN cargo +nightly build --release -p graphql-gateway
@@ -41,7 +42,7 @@ RUN apt-get update && \
 WORKDIR /app
 
 # Copy binary from builder
-COPY --from=builder /app/target/release/graphql-gateway /app/graphql-gateway
+COPY --from=builder /app/backend/target/release/graphql-gateway /app/graphql-gateway
 
 # Create non-root user
 RUN useradd -m -u 1000 appuser && \
