--- a/backend/content-service/Dockerfile
+++ b/backend/content-service/Dockerfile
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     build-essential \
     protobuf-compiler \
     librdkafka-dev \
+    curl \
     && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
